--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 *{
     background-color: #111;
     color: #fff;
-    font-family: Gilroy,poppins-regular;    
+    font-family: 'Poppins', monospace;
 }
 
 .generated-text {
